Properly loads models from disk.